--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="two" id="synctalk_image" style="display: inline;"> 
       <video  width="320" height="180" muted autoplay loop>
-      <source src="images/synctalk/synctalk.mp4" alt="synctalk mp4" width="320" height="180" type="video/mp4">
+      <source src="images/synctalk.mp4" alt="synctalk mp4" width="320" height="180" type="video/mp4">
       </video>
     </div>
-      <img src='images/synctalk/synctalk.png' alt="synctalk" width="320" height="180">
+      <img src='images/synctalk.png' alt="synctalk" width="320" height="180">
     </div>
     <script type="text/javascript">
       function synctalk_start() {
