--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/VincentHu.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/ZiqiaoPeng.jpg" class="hoverZoomLink"></a>
+              <a href="images/VincentHu.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/VincentHu.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
