--- a/index.html
+++ b/index.html
@@ -21,18 +21,14 @@
                 <name>Wentao Hu</name>
               </p>
               <p>I am a MS student at 
-                <a href="https://www.ruc.edu.cn/en">Renmin University of China</a>,
-              </p>
+                <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Majoring in Machine Learing. I am currently interning at Kuaishou Tech.
+              </p>            
               <p>
-                I'm actively seeking internship opportunities that align with my research interests. If you know of any openings or have recommendations, I'd greatly appreciate your input.
-              </p>               
-              <p>
-                My areas of focus include computer vision, 3D facial animation, talking head generation, and AI-generated content.
+                My areas of focus include Talking-Head generation, 3D facial animation, Gaussian Splatting, and AI-generated content.
               </p>              
               <p style="text-align:center">
-                huwt@bupt.edu.cn
+                huwt@bupt.edu.cn &nbsp/&nbsp
                 <a href="https://github.com/VincentHu19">Github</a>  
-
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -75,18 +71,18 @@
       <papertitle>SyncTalk: The Devil is in the Synchronization for Talking Head Synthesis</papertitle>
     </a>
     <br>
-    <strong>Ziqiao Peng</strong>,
+    <a href="https://ZiqiaoPeng.github.io/">Ziqiao Peng</a>,
     <strong>Wentao Hu</strong>,
-    <strong>Yue Shi</strong>,
-    <strong>Xiangyu Zhu</strong>,
-    <strong>Xiaomei Zhang</strong>,
-    <strong>Hao Zhao</strong>,
-    <strong>Jun He</strong>,
-    <strong>Hongyan Liu</strong>,
-    <strong>Zhaoxin Fan</strong>,
+    Yue Shi,
+    Xiangyu Zhu,
+    Xiaomei Zhang,
+    Hao Zhao,
+    Jun He,
+    Hongyan Liu,
+    Zhaoxin Fan,
     <br>
     
-    <a href="./synctalk">Project</a>
+    <a href="https://ziqiaopeng.github.io/synctalk/">Project</a>
     /
     <a href="https://arxiv.org/abs/2311.17590">arXiv</a>
     /
