--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
                 <name>Wentao Hu</name>
               </p>
               <p>I am a MS student at 
-                <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Majoring in Machine Learing. I am currently interning at Kuaishou Tech.
-              </p>            
+                <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Majoring in Machine Learing. 
+              </p>  
+              <p>
+                I am currently interning at Kuaishou Tech. 
+              </p>  
               <p>
                 My areas of focus include Talking-Head generation, 3D facial animation, Gaussian Splatting, and AI-generated content.
               </p>              
@@ -81,10 +84,10 @@
     Hongyan Liu,
     Zhaoxin Fan,
     <br>
-    
+    <em>CVPR</em>, 2024
     <a href="https://ziqiaopeng.github.io/synctalk/">Project</a>
     /
-    <a href="https://arxiv.org/abs/2311.17590">arXiv</a>
+    <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Peng_SyncTalk_The_Devil_is_in_the_Synchronization_for_Talking_Head_CVPR_2024_paper.html">Paper</a>
     /
     <a href="https://github.com/ziqiaopeng/SyncTalk">Code</a>
     <p></p>
@@ -103,7 +106,7 @@
             <td style="padding:0px">
               <br>
               <p style="text-align:right;font-size:small;">
-                Last updated: Nov. 2023
+                Last updated: Seq. 2024
                 <br>
                 Web page design credit to <a href="https://jonbarron.info" style="font-size: 14px">Jon Barron</a>
               </p>
