--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Wentao Hu</name>
               </p>
               <p>I am a MS student at 
-                <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>, Majoring in Machine Learing. 
+                <a href="https://www.bupt.edu.cn">Beijing University of Posts and Telecommunications</a>.
               </p>  
               <p>
                 I am currently interning at Kuaishou Tech. 
@@ -85,6 +85,7 @@
     Zhaoxin Fan,
     <br>
     <em>CVPR</em>, 2024
+    <br>
     <a href="https://ziqiaopeng.github.io/synctalk/">Project</a>
     /
     <a href="https://openaccess.thecvf.com/content/CVPR2024/html/Peng_SyncTalk_The_Devil_is_in_the_Synchronization_for_Talking_Head_CVPR_2024_paper.html">Paper</a>
