--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </script>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
-    <a href="./synctalk">
+    <a href="https://ziqiaopeng.github.io/synctalk/">
       <papertitle>SyncTalk: The Devil is in the Synchronization for Talking Head Synthesis</papertitle>
     </a>
     <br>
