--- a/GGAvatars/index.html
+++ b/GGAvatars/index.html
@@ -115,7 +115,7 @@
               <strong>Di Zhang</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <strong>Hui Tian</a><sup>1</sup>
+              <a>Hui Tian</a><sup>1</sup>
             </span>
           </div>
 
