--- a/GGAvatars/index.html
+++ b/GGAvatars/index.html
@@ -83,7 +83,7 @@
 </nav> -->
 
 
-<!-- <section class="hero">
+<section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
@@ -99,76 +99,34 @@
               <strong>Wansheng Tian</strong><sup>1</sup>,
             </span>
             <span class="author-block">
-              <strong>Fan Shi</a><sup>2</sup>,
+              <strong>Fan Shi</strong><sup>2</sup>,
             </span>
             <span class="author-block">
               <strong>Tianze Shi</strong><sup>3</sup>,
             </span>
             <span class="author-block">
-              <strong>Xiaoqiang Liu</a><sup>2</sup>,
+              <strong>Xiaoqiang Liu</strong><sup>2</sup>,
             </span>
             <br>
             <span class="author-block">
-              <strong>Pengfei Wan</a><sup>2</sup>,
+              <strong>Pengfei Wan</strong><sup>2</sup>,
             </span>
             <span class="author-block">
-              <strong>Di Zhang</a><sup>2</sup>,
+              <strong>Di Zhang</strong><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a>Hui Tian</a><sup>1</sup>
+              <strong>Hui Tian</strong><sup>1</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Beijing University of Posts and Telecommunications,</span>
+            <br>
             <span class="author-block"><sup>2</sup>Kuaishou Technology,</span>
             <span class="author-block"><sup>3</sup>Peking University.,</span>
 
-          </div> -->
-<section class="hero">
-  <div class="hero-body">
-    <div class="container is-max-desktop">
-      <div class="columns is-centered">
-        <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title"> SyncTalk: The Devil&#x1F608; is in the Synchronization for Talking Head Synthesis</h1>
-
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://ziqiaopeng.github.io/">Ziqiao Peng</a><sup>1</sup>,</span>
-            <span class="author-block">
-              <strong>Wentao Hu</strong><sup>2</sup>,</span>
-            <span class="author-block">
-              <strong>Yue Shi</strong><sup>3</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://xiangyuzhu-open.github.io/homepage/">Xiangyu Zhu</a><sup>4</sup>,
-            </span>
-            <span class="author-block">
-              <strong>Xiaomei Zhang</strong><sup>4</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://sites.google.com/view/fromandto">Hao Zhao</a><sup>5</sup>,
-            </span>
-            <br>
-            <span class="author-block">
-              <a href="http://info.ruc.edu.cn/jsky/szdw/adszycx/bssds/jsjyyjs1/22e455e725db45a3a310bbc0f045c0f1.htm">Jun He</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://www.sem.tsinghua.edu.cn/info/1189/32080.htm">Hongyan Liu</a><sup>5*</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://zhaoxinf.github.io/">Zhaoxin Fan</a><sup>1*</sup>
-            </span>
           </div>
-
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Renmin University of China,</span>
-            <span class="author-block"><sup>2</sup>Beijing University of Posts and Telecommunications,</span>
-            <span class="author-block"><sup>3</sup>Psyche AI Inc.,</span>
-            <span class="author-block"><sup>4</sup>Chinese Academy of Sciences,</span>
-            <span class="author-block"><sup>5</sup>Tsinghua University</span>
-
-          </div>
+          
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
