--- a/GGAvatars/index.html
+++ b/GGAvatars/index.html
@@ -277,12 +277,12 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Proposed Method</h2>
         <div class="content has-text-justified">
-          <img src="./static/videos/pipeline.png" alt="synctalk">
+          <img src="./static/videos/pipeline.png" alt="GGAvatars">
           <p>
             <br>
             Overview of GGAvatars. Given a source image , we use an Identity Encoder to extract 
             identity features and a Gaussian Generator to predict Gaussian feature map in the UV space. 
-            The color and spacial features of are visualized in the figure. Then we perform UV sampling on $F$ to obtain the canonical 3D Gaussian head. 
+            The color and spacial features of are visualized in the figure. Then we perform UV sampling on the Gaussian feature map to obtain the canonical 3D Gaussian head. 
             We use pose and expression of the driving image for animation by deforming the cannonical head. The synthesized image is supervised by ground truth for self-supervised learning.
           </p>
           <!-- <p>
