--- a/GGAvatars/index.html
+++ b/GGAvatars/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</h1>
+          <h1 class="title is-1 publication-title">GGAvatars: Learning Generalizable and Animatable Gaussian Head Priors from 2D Image Collections</h1>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">
