--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -166,7 +166,7 @@
   </div>
 </section>
 
-<section class="hero teaser">
+<!-- <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay loop controls playsinline height="100%">
@@ -179,7 +179,7 @@
       </h2>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- <section class="hero is-light is-small">
