--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -182,6 +182,16 @@
 </section> -->
 
 
+<div class="columns is-centered has-text-centered">
+  <div class="column is-full-width">
+    <h2 class="title is-3">Video</h2>
+    <div class="publication-video">
+      <iframe src="https://www.youtube.com/embed/5YJY6-wcOJo?rel=0&amp;showinfo=0"
+              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+  
 <!-- <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
