--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -181,16 +181,6 @@
   </div>
 </section> -->
 
-
-<div class="columns is-centered has-text-centered">
-  <div class="column is-full-width">
-    <h2 class="title is-3">Video</h2>
-    <div class="publication-video">
-      <iframe src="https://www.youtube.com/embed/5YJY6-wcOJo?rel=0&amp;showinfo=0"
-              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
-  </div>
-</div>
   
 <!-- <section class="hero is-light is-small">
   <div class="hero-body">
@@ -252,6 +242,16 @@
 
 <section class="section">
   <div class="container is-max-desktop">
+    <!-- Video -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-full-width">
+        <h2 class="title is-3">Video</h2>
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/5YJY6-wcOJo?rel=0&amp;showinfo=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
