--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -141,7 +141,7 @@
 
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="#teaser"
+                <a href="https://youtu.be/aWVsM3H0xOE"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -247,7 +247,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/5YJY6-wcOJo?rel=0&amp;showinfo=0"
+          <iframe src="https://youtu.be/aWVsM3H0xOE"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
