--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -247,7 +247,7 @@
       <div class="column is-full-width">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://youtu.be/aWVsM3H0xOE"
+          <iframe src="https://www.youtube.com/embed/aWVsM3H0xOE?si=_qIdixW5OM5oZWp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
