--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -122,7 +122,7 @@
             <span class="author-block"><sup>1</sup>Beijing University of Posts and Telecommunications,</span>
             <br>
             <span class="author-block"><sup>2</sup>Kuaishou Technology,</span>
-            <span class="author-block"><sup>3</sup>Renmin University.</span>
+            <span class="author-block"><sup>3</sup>Renmin University of China</span>
 
           </div>
           
