--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -130,12 +130,12 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2311.17590"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>Paper(Coming Soon)</span>
                 </a>
               </span>
 
@@ -149,7 +149,7 @@
                   <span>Video</span>
                 </a>
               </span>
-              <!-- Code Link. -->
+<!--               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/ziqiaopeng/SyncTalk"
                    class="external-link button is-normal is-rounded is-dark">
@@ -157,7 +157,7 @@
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
-                  </a>
+                  </a> -->
             </div>
           </div>
         </div>
