--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -89,12 +89,14 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</h1>
-
+          <small>
+          ECCV 2024
+          </small>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://vincenthu19.github.io/">Wentao Hu</a><sup>1</sup>,</span>
             <span class="author-block">
-              <strong>Shunkai Li</strong><sup>2</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=qH7NZaUAAAAJ&hl=zh-CN&oi=ao">Shunkai Li</a><sup>2</sup>,</span>
             <span class="author-block">
               <a href="https://ziqiaopeng.github.io/">Ziqiao Peng</a><sup>3</sup>,</span>
             <span class="author-block">
