--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -88,10 +88,11 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</h1>
+          <h1 class="title is-1 publication-title">GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation<br>
           <small>
-          ECCV 2024
+          ICCV 2025
           </small>
+          </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://vincenthu19.github.io/">Wentao Hu</a><sup>1</sup>,</span>
