--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -95,9 +95,9 @@
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://vincenthu19.github.io/">Wentao Hu</a><sup>1</sup>,</span>
+              <a href="https://vincenthu19.github.io/">Wentao H*</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=qH7NZaUAAAAJ&hl=zh-CN&oi=ao">Shunkai Li</a><sup>2</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=qH7NZaUAAAAJ&hl=zh-CN&oi=ao">Shunkai Li</a><sup>2*</sup>,</span>
             <span class="author-block">
               <a href="https://ziqiaopeng.github.io/">Ziqiao Peng</a><sup>3</sup>,</span>
             <span class="author-block">
