--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -126,6 +126,8 @@
             <br>
             <span class="author-block"><sup>2</sup>Kuaishou Technology,</span>
             <span class="author-block"><sup>3</sup>Renmin University of China</span>
+            <br>
+            <span class="author-block"><sup>*</sup>Equal Contribution</span>
 
           </div>
           
