--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -101,7 +101,7 @@
             <span class="author-block">
               <a href="https://ziqiaopeng.github.io/">Ziqiao Peng</a><sup>3</sup>,</span>
             <span class="author-block">
-              <strong>Haoxian Zhang</strong><sup>2</sup>,
+              <a href="https://scholar.google.com/citations?user=r_aOHlQAAAAJ&hl">Haoxian Zhang</a><sup>2</sup>,</span>
             </span>
             <span class="author-block">
               <strong>Fan Shi</strong><sup>2</sup>,
@@ -135,12 +135,12 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2506.21513"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper(Coming Soon)</span>
+                  <span>Paper</span>
                 </a>
               </span>
 
