--- a/index.html
+++ b/index.html
@@ -49,6 +49,42 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 				
 
+<tr onmouseout="ggtalker_stop()" onmouseover="ggtalker_start()" >
+  <td style="padding:20px;width:25%;vertical-align:middle">
+    <div class="two" id="synctalk_image" style="display: inline;"> 
+      <img src='images/ggtalker.png' alt="ggtalker" width="320" height="180">
+    </div>
+  </td>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+    <a href="https://vincenthu19.github.io/GGTalker/">
+      <papertitle>GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</papertitle>
+    </a>
+    <br>
+    <strong>Wentao Hu</strong>,
+    Shunkai Li,
+    Ziqiao Peng,
+    Haoxian Zhang,
+    Fan Shi,
+    Xiaoqiang Liu,
+    Pengfei Wan,
+    Di Zhang,
+    Hui Tian,
+    <br>
+    <em>ICCV</em>, 2025
+    <br>
+    <a href="https://vincenthu19.github.io/GGTalker/">Project</a>
+    /
+    <a href="https://arxiv.org/abs/2506.21513">Paper</a>
+    /
+    <a href="">Code</a>
+    <p></p>
+    <p>
+      we propose GGTalker, which synthesizes talking heads through a combination of generalizable priors and identity-specific adaptation.
+    </p>
+  </td>
+</tr>
+
+
 <tr onmouseout="synctalk_stop()" onmouseover="synctalk_start()" >
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="two" id="synctalk_image" style="display: inline;"> 
@@ -74,7 +110,7 @@
       <papertitle>SyncTalk: The Devil is in the Synchronization for Talking Head Synthesis</papertitle>
     </a>
     <br>
-    <a href="https://ZiqiaoPeng.github.io/">Ziqiao Peng</a>,
+    Ziqiao Peng,
     <strong>Wentao Hu</strong>,
     Yue Shi,
     Xiangyu Zhu,
@@ -94,6 +130,54 @@
     <p></p>
     <p>
       We propose a NeRF-based method to synthesis realistic talking head videos.
+    </p>
+  </td>
+</tr>
+
+
+<tr onmouseout="synctalkpp_stop()" onmouseover="synctalkpp_start()" >
+  <td style="padding:20px;width:25%;vertical-align:middle">
+    <div class="two" id="synctalkpp_image" style="display: inline;"> 
+      <video  width="320" height="180" muted autoplay loop>
+      <source src="images/synctalkpp/synctalkpp.mp4" alt="synctalkpp mp4" width="320" height="180" type="video/mp4">
+      </video>
+    </div>
+      <img src='images/synctalkpp/synctalkpp.png' alt="synctalkpp" width="320" height="180">
+    </div>
+    <script type="text/javascript">
+      function synctalkpp_start() {
+        document.getElementById('synctalkpp_image').style.opacity = "1";
+      }
+
+      function synctalkpp_stop() {
+        document.getElementById('synctalkpp_image').style.opacity = "0";
+      }
+      synctalkpp_stop()
+    </script>
+  </td>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+    <a href="./synctalk++">
+      <papertitle>SyncTalk++: High-Fidelity and Efficient Synchronized Talking Heads Synthesis Using Gaussian Splatting</papertitle>
+    </a>
+    <br>
+    Ziqiao Peng,
+    <strong>Wentao Hu</strong>,
+    Junyuan Ma,
+    Xiangyu Zhu,
+    Xiaomei Zhang,
+    Hao Zhao,
+    Hui Tian,
+    Jun He,
+    Hongyan Liu,
+    Zhaoxin Fan
+    <br>
+    
+    <a href="./synctalk++">Project</a>
+    /
+    <a href="https://arxiv.org/abs/2506.14742">arXiv</a>
+    <p></p>
+    <p>
+      We propose a 3DGS-based method to synthesis realistic talking head videos with better OOD quality.
     </p>
   </td>
 </tr>
