--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 
 <tr onmouseout="ggtalker_stop()" onmouseover="ggtalker_start()" >
   <td style="padding:20px;width:25%;vertical-align:middle">
-    <div class="two" id="synctalk_image" style="display: inline;"> 
+    <div> 
       <img src='images/ggtalker.png' alt="ggtalker" width="320" height="180">
     </div>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
     <a href="https://vincenthu19.github.io/GGTalker/">
-      <papertitle>GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</papertitle>
+      <papertitle>[ICCV 2025] GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</papertitle>
     </a>
     <br>
     <strong>Wentao Hu</strong>,
@@ -75,8 +75,6 @@
     <a href="https://vincenthu19.github.io/GGTalker/">Project</a>
     /
     <a href="https://arxiv.org/abs/2506.21513">Paper</a>
-    /
-    <a href="">Code</a>
     <p></p>
     <p>
       we propose GGTalker, which synthesizes talking heads through a combination of generalizable priors and identity-specific adaptation.
@@ -107,7 +105,7 @@
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
     <a href="https://ziqiaopeng.github.io/synctalk/">
-      <papertitle>SyncTalk: The Devil is in the Synchronization for Talking Head Synthesis</papertitle>
+      <papertitle>[CVPR 2024] SyncTalk: The Devil is in the Synchronization for Talking Head Synthesis</papertitle>
     </a>
     <br>
     Ziqiao Peng,
