--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="two" id="synctalkpp_image" style="display: inline;"> 
       <video  width="320" height="180" muted autoplay loop>
-      <source src="images/synctalkpp/synctalkpp.mp4" alt="synctalkpp mp4" width="320" height="180" type="video/mp4">
+      <source src="images/synctalkpp.mp4" alt="synctalkpp mp4" width="320" height="180" type="video/mp4">
       </video>
     </div>
-      <img src='images/synctalkpp/synctalkpp.png' alt="synctalkpp" width="320" height="180">
+      <img src='images/synctalkpp.png' alt="synctalkpp" width="320" height="180">
     </div>
     <script type="text/javascript">
       function synctalkpp_start() {
