--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     Xiaoqiang Liu,
     Pengfei Wan,
     Di Zhang,
-    Hui Tian,
+    Hui Tian
     <br>
     <a href="https://vincenthu19.github.io/GGTalker/">Project</a>
     /
@@ -128,7 +128,7 @@
     Hao Zhao,
     Jun He,
     Hongyan Liu,
-    Zhaoxin Fan,
+    Zhaoxin Fan
     <br>
     <a href="https://ziqiaopeng.github.io/synctalk/">Project</a>
     /
