--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
       <img src='images/ggtalker.png' alt="ggtalker" width="320" height="180">
     </div>
     <script type="text/javascript">
-      function synctalk_start() {
+      function ggtalker_start() {
         document.getElementById('ggtalker_image').style.opacity = "1";
       }
 
-      function synctalk_stop() {
+      function ggtalker_stop() {
         document.getElementById('ggtalker_image').style.opacity = "0";
       }
-      synctalk_stop()
+      ggtalker_stop()
     </script>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
