--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -309,7 +309,10 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>
   @article{hu2025ggtalker,
-    title={GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation}, 
+    title={GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation},
+    author={Hu, Wentao and Li, Shunkai and Peng, Ziqiao and Zhang, Haoxian and Shi, Fan and Liu, Xiaoqiang and Wan, Pengfei and Zhang, Di and Tian, Hui},
+    journal={arXiv preprint arXiv:2506.21513},
+    year={2025}
   }
 </code></pre>
   </div>
