--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -280,7 +280,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Proposed Method</h2>
         <div class="content has-text-justified">
-          <img src="./static/videos/pipeline.png" alt="GGAvatars">
+          <img src="../images/ggtalker.png" alt="GGAvatars">
           <p>
             <br>
             Overview of GGTalker. We introduce a two-stage Prior-Adaptation approach for talking head synthesis. 
