--- a/GGTalker/index.html
+++ b/GGTalker/index.html
@@ -90,7 +90,7 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation<br>
           <small>
-          ICCV 2025
+          ICCV 2025 (Highlight✨)
           </small>
           </h1>
           <div class="is-size-5 publication-authors">
