--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
     <a href="https://vincenthu19.github.io/GGTalker/">
-      <papertitle>[ICCV 2025] GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</papertitle>
+      <papertitle>[ICCV 2025 Highlight] GGTalker: Talking Head Systhesis with Generalizable Gaussian Priors and Identity-Specific Adaptation</papertitle>
     </a>
     <br>
     <strong>Wentao Hu</strong>,
